# register-bridge

./: .gitignore  CMakeLists.txt  README.md
client/: setup.py
client/quantumctrl/: __init__.py  client.py  protocol.py
client/quantumctrl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/plans/: 2026-03-18-fpga-bridge-implementation.md  2026-03-18-scaffold-design.md
server/: CMakeLists.txt  main.cpp  protocol.hpp  register_bank.cpp  register_bank.hpp  server.cpp  server.hpp  thread_pool.cpp  thread_pool.hpp
tests/cpp/: CMakeLists.txt  test_protocol.cpp  test_register_bank.cpp  test_thread_pool.cpp
tests/python/: test_client.py  test_integration.py  test_protocol.py
